--- a/index.html
+++ b/index.html
@@ -25,65 +25,68 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
                 <button>Saber Más</button>
             </header>
-            <section>
-              <div class="cajaP"></div>
-              <div class="cajaG imagefiller"></div>
-            </section>
-            <section>
-              <div class="cajaG">
+            <section class="checkerboard">
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h3>HACEMOS CRECER TÚ NEGOCIO</h3>
+                  <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
                 </div>
               </div>
-              <div class="cajaP">
+              <div class="caja imagefiller"></div>
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <img src="/img/seo.png" />
+                  <h3>SEO</h3>
+                  <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
                 </div>
               </div>
-              <div class="cajaP">
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <img src="/img/disenoweb.png" />
+                  <h3>Diseño Web</h3>
+                  <p>La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes. Mejora tu imagen y diferenciate de la competencia.</p>
                 </div>
               </div>
-              <div class="cajaG">
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <img src="/img/redes_sociales.png" />
+                  <h3>REDES SOCIALES</h3>
+                  <p>Aumenta la notoriedad y visibilidad de tú peluquería en redes sociales. Amplia tu cartera de clientes y promociona tusservicios.</p>
                 </div>
               </div>
-              <div class="cajaG">
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <img src="/img/sem.png" />
+                  <h3>SEM</h3>
+                  <p>Filtra a tu público objetivo, aumenta el tráfico de tu web y consigue captar a nuevos clientes.</p>
                 </div>
               </div>
-              <div class="cajaP">
+              <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <img src="/img/google_mybusiness.png" />
+                  <h3>GOOGLE MYBUSINESS</h3>
+                  <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. 2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps.</p>
                 </div>
               </div>
-              <div class="cajaP">
+              <div class="caja">
                 <div class="caja-inner">
                   <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h3>VÍDEO & FOTOGRAFíA</h3>
+                  <p>Muestra a tus futuros clientes los valores de tu peluquería, mostrando una visión más cercana, familiar y profesional. No existe mejor forma de transmitir confianza a tus clientes. Presenta al público el antes y el después del look de tus clientes,para que los usuarios observen el resultado de tus servicios.</p>
                 </div>
               </div>
-              <div class="cajaG">
+              <div class="caja">
                 <div class="caja-inner">
                   <img src="/img/default.png" />
-                  <h3>servicio</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <h3>SISTEMA DE RESERVA</h3>
+                  <p>Añade un sistema de reserva a tu web para que puedan solicitar la cita automáticamente y facilita tu organización interna.</p>
+                </div>
+              </div>
+              <div class="caja">
+                <div class="caja-inner">
+                  <img src="/img/default.png" />
+                  <h3>BRANDING</h3>
+                  <p>Diseñamos tú imagen de marca atrayendo así a más clientes y hacer que tu negocio sea reconocido.</p>
                 </div>
               </div>
             </section>
