--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
+                  <img src="/img/reserva.png" />
                   <h3>SISTEMA DE RESERVA</h3>
                   <p>Añade un sistema de reserva a tu web para que puedan solicitar la cita automáticamente y facilita tu organización interna.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/default.png" />
+                  <img src="/img/branding.png" />
                   <h3>BRANDING</h3>
                   <p>Diseñamos tú imagen de marca atrayendo así a más clientes y hacer que tu negocio sea reconocido.</p>
                 </div>
