--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <section id="contact">
               <h2>LISTO PARA HACER CRECER TÚ PELUQUERÍA?</h2>
 
-              <div id="mauticform_wrapper_pelumark" class="mauticform_wrapper">
+              <div id="mauticform_wrapper_pelumark">
                   <form autocomplete="false" role="form" method="post" action="https://phpstack-365445-1147909.cloudwaysapps.com/index.php/form/submit?formId=4" id="mauticform_pelumark" data-mautic-form="pelumark" enctype="multipart/form-data">
                       <div class="mauticform-error" id="mauticform_pelumark_error"></div>
                       <div class="mauticform-message" id="mauticform_pelumark_message"></div>
@@ -153,7 +153,7 @@
             </section>
             <footer>
                 <div class="wrapper">
-                    <h3>footer™</h3>
+                    <h3>PeluMark™</h3>
                 </div>
             </footer>
         </div> <!-- #main-container -->
