--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
             </section>
             <footer>
                 <div class="wrapper">
-                    <h3>PeluMark™</h3>
+                    <a href="mailto:hola@pelumark.com">hola@pelumark.com</a>
+                    <h3>PeluMark – Agencia de marketing especializada en peluquerias.</h3>
+                    <h3>PeluMark.com © 2020 </br> Todos los derechos reservados.</h3>
                 </div>
             </footer>
         </div> <!-- #main-container -->
