--- a/index.html
+++ b/index.html
@@ -57,56 +57,56 @@
               <div class="caja imagefiller"></div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/seo.png" />
+                  <img src="/img/seo.webp" />
                   <h3>SEO</h3>
                   <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/disenoweb.png" />
+                  <img src="/img/disenoweb.webp" />
                   <h3>Diseño Web</h3>
                   <p>La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes. Mejora tu imagen y diferenciate de la competencia.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/redes_sociales.png" />
+                  <img src="/img/redes_sociales.webp" />
                   <h3>REDES SOCIALES</h3>
                   <p>Aumenta la notoriedad y visibilidad de tú peluquería en redes sociales. Amplia tu cartera de clientes y promociona tusservicios.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/sem.png" />
+                  <img src="/img/sem.webp" />
                   <h3>SEM</h3>
                   <p>Filtra a tu público objetivo, aumenta el tráfico de tu web y consigue captar a nuevos clientes.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/google_mybusiness.png" />
+                  <img src="/img/google_mybusiness.webp" />
                   <h3>GOOGLE MYBUSINESS</h3>
                   <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. 2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/video.png" />
+                  <img src="/img/video.webp" />
                   <h3>VÍDEO & FOTOGRAFíA</h3>
                   <p>Muestra a tus futuros clientes los valores de tu peluquería, mostrando una visión más cercana, familiar y profesional. No existe mejor forma de transmitir confianza a tus clientes. Presenta al público el antes y el después del look de tus clientes,para que los usuarios observen el resultado de tus servicios.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/reserva.png" />
+                  <img src="/img/reserva.webp" />
                   <h3>SISTEMA DE RESERVA</h3>
                   <p>Añade un sistema de reserva a tu web para que puedan solicitar la cita automáticamente y facilita tu organización interna.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img src="/img/branding.png" />
+                  <img src="/img/branding.webp" />
                   <h3>BRANDING</h3>
                   <p>Diseñamos tú imagen de marca atrayendo así a más clientes y hacer que tu negocio sea reconocido.</p>
                 </div>
