--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
         <div class="main-container">
             <header style="background-image: url('/img/header_bg.jpg')" data-safe-defer-style>
-                <img src="/img/pelumark_logo.svg" />
-                <!-- <h1 class="textbox">PELUMARK</h1> -->
+                <img src="/img/pelumark_logo.svg" alt="PeluMark logo" data-safe-defer-src/>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
                 <button>Saber Más</button>
             </header>
@@ -48,56 +47,56 @@
               <div style="background-image: url('/img/image_two.jpg')" data-safe-defer-style class="caja imagefiller"></div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/seo.png" data-safe-defer-src />
+                  <img class="lazy" alt="seo" src="/img/seo.png" data-safe-defer-src />
                   <h3>SEO</h3>
                   <p>Aparece en los primeros resultados de Internet e incrementa las visitas a tu web.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/disenoweb.png" data-safe-defer-src />
+                  <img class="lazy" alt="diseño web" src="/img/disenoweb.png" data-safe-defer-src />
                   <h3>Diseño Web</h3>
                   <p>La página web es un establecimiento abierto las 24 horas durante los 365 días donde pueden encontrarte futuros clientes. Mejora tu imagen y diferenciate de la competencia.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/redes_sociales.png" data-safe-defer-src />
+                  <img class="lazy" alt="redes sociales" src="/img/redes_sociales.png" data-safe-defer-src />
                   <h3>REDES SOCIALES</h3>
                   <p>Aumenta la notoriedad y visibilidad de tú peluquería en redes sociales. Amplia tu cartera de clientes y promociona tusservicios.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/sem.png" data-safe-defer-src />
+                  <img class="lazy" alt="sem" src="/img/sem.png" data-safe-defer-src />
                   <h3>SEM</h3>
                   <p>Filtra a tu público objetivo, aumenta el tráfico de tu web y consigue captar a nuevos clientes.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/google_mybusiness.png" data-safe-defer-src />
+                  <img class="lazy" alt="google mybusiness" src="/img/google_mybusiness.png" data-safe-defer-src />
                   <h3>GOOGLE MYBUSINESS</h3>
                   <p>Aparece por delante de tu competencia y facilita la localización en Google Maps. 2 de cada 3 de los usuarios que visitan una peluquería por primera vez lo hacen a través de Google Maps.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/video.png" data-safe-defer-src />
+                  <img class="lazy" alt="video y fotografia" src="/img/video.png" data-safe-defer-src />
                   <h3>VÍDEO & FOTOGRAFíA</h3>
                   <p>Muestra a tus futuros clientes los valores de tu peluquería, mostrando una visión más cercana, familiar y profesional. No existe mejor forma de transmitir confianza a tus clientes. Presenta al público el antes y el después del look de tus clientes,para que los usuarios observen el resultado de tus servicios.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/reserva.png" data-safe-defer-src />
+                  <img class="lazy" alt="sistema de reserva" src="/img/reserva.png" data-safe-defer-src />
                   <h3>SISTEMA DE RESERVA</h3>
                   <p>Añade un sistema de reserva a tu web para que puedan solicitar la cita automáticamente y facilita tu organización interna.</p>
                 </div>
               </div>
               <div class="caja">
                 <div class="caja-inner">
-                  <img class="lazy" alt="" src="/img/branding.png" data-safe-defer-src />
+                  <img class="lazy" alt="branding" src="/img/branding.png" data-safe-defer-src />
                   <h3>BRANDING</h3>
                   <p>Diseñamos tú imagen de marca atrayendo así a más clientes y hacer que tu negocio sea reconocido.</p>
                 </div>
@@ -183,7 +182,6 @@
 
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" defer></script>
-
         <script src="https://kit.fontawesome.com/4b977b2858.js" crossorigin="anonymous"></script>
         <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet" defer />
         <script src="https://calendly.com/assets/external/widget.js" type="text/javascript" defer></script>
@@ -209,14 +207,14 @@
         </script>
 
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-162354627-1','auto');ga('send','pageview');
         </script>
     </body>
 </html>
